about page polish, cta's

--- a/about.html
+++ b/about.html
@@ -5,15 +5,15 @@ title: About Us
 
 <div class="about-us">
 
-  <section class="page-header">
-    <div class="page-header-title-wrapper">
-      <div class="page-header-title">
+  <section class="page-hdr">
+    <div class="page-hdr-title-wrapper">
+      <div class="page-hdr-title">
         <h1> We're Skylight! </h1>
       </div>
     </div>
 
-    <div class="page-header-content-wrapper">
-      <div class="page-header-content">
+    <div class="page-hdr-content-wrapper">
+      <div class="page-hdr-content">
         <p> Our mission is to make government work in a digital world. </p>
         <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
       </div>
@@ -127,3 +127,5 @@ title: About Us
   </section>
 
 </div>
+
+{% include join_us_cta.html %}
