--- a/index.html
+++ b/index.html
@@ -23,18 +23,17 @@ layout: default
         Skylight is a HUBZone digital consultancy, using design, technology,
         <br /> and procurement to enable government success in the digital age.
       </p>
-
-      <a class="btn btn-primary btn-lg text-uppercase font-weight-bold" href="/hire-us" role="button">
-        Let's talk
-      </a>
     </div>
+    <a class="lp-headline-cta-btn" href="/hire-us" role="button">
+      Let's talk
+    </a>
   </section>
 
   <div class="lp-body">
 
     <section class="lp-body-section">
-      <div class="lp-body-heading-wrapper">
-        <div class="lp-body-heading">
+      <div class="lp-body-hdr-wrapper">
+        <div class="lp-body-hdr">
           <h2>
             Solving important problems
           </h2>
@@ -43,7 +42,7 @@ layout: default
         </div>
       </div>
 
-      <div class="row">
+      <div class="lp-body-content-wrapper">
         <div class="lp-body-content">
           <p>
             Every day millions of people &mdash; from veterans to immigrants &mdash;
@@ -76,8 +75,8 @@ layout: default
     </section>
 
     <section class="lp-body-section">
-      <div class="lp-body-heading-wrapper">
-        <div class="lp-body-heading">
+      <div class="lp-body-hdr-wrapper">
+        <div class="lp-body-hdr">
           <h2>
             Services designed for your success
           </h2>
@@ -127,8 +126,8 @@ layout: default
     </section>
 
     <section class="lp-body-section">
-      <div class="lp-body-heading-wrapper">
-        <div class="lp-body-heading">
+      <div class="lp-body-hdr-wrapper">
+        <div class="lp-body-hdr">
           <h2>
             Experience that speaks volumes
           </h2>
@@ -162,8 +161,8 @@ layout: default
     </section>
 
     <section class="lp-body-section">
-      <div class="lp-body-heading-wrapper">
-        <div class="lp-body-heading">
+      <div class="lp-body-hdr-wrapper">
+        <div class="lp-body-hdr">
           <h2 class="hidden-md-up">
             Strengthening your culture through ours
           </h2>
