--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ title: About Us
           originates from Washington DC.
         </p>
 
-        <img class="img-fluid" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
 
         <p>
           We're impact junkies who are driven to create better outcomes for the public through
