--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ layout: default
       </p>
     </div>
     <a class="lp-headline-cta-btn" href="/hire-us" role="button">
-      Let's talk
+      <span>Let's talk</span>
+      <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
     </a>
   </section>
 
@@ -183,7 +184,7 @@ layout: default
 
           <p>
             We focus heavily on hiring and developing great people so you can
-            realize the benefits of world-class digital consulting talent.
+            realize the benefits of first-rate digital consulting talent.
           </p>
 
           <p>
