initial work on services page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
             These services are designed not only to deliver results, but to also
             transfer our knowledge of modern principles and practices to you.
             To facilitate this learning process, we employ a unique practice called
-            embedded instructional design. Even further, <a href="/guilds">our guilds</a> (communities of practice)
+            <span class="font-italic">embedded instructional design</span>. Even further, <a href="/guilds">our guilds</a> (communities of practice)
             make all of our delivery assets (for example, methodologies) completely free, open,
             and accessible to you.
           </p>
