--- a/services.html
+++ b/services.html
@@ -19,20 +19,26 @@ title: Our Services
     </div>
   </section>
 
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="card">
-          <img class="card-img-top" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
-          <div class="card-block">
-            <h4 class="card-title">Digital Services Delivery</h4>
-            <p class="card-text">Card test</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+  <div class="container-fluid">
+    <div class="service-areas">
+
+      {% for service_area in site.service_areas %}
+        <div class="service-area">
+          <a href="{{service_area.path}}">
+            <div class="service-area-card">
+              <img class="service-area-icon" src="{{service_area.icon_path}}" alt="{{service_area.icon_description}}">
+              <div class="service-area-description">
+                <h3>{{service_area.name}}</h3>
+                <p>{{service_area.description}}</p>
+              </div>
+              <div class="service-area-directional-icon">
+                <i class="fa fa-3x fa-arrow-circle-o-right" aria-hidden="true"></i>
+              </div>
+            </div>
+          </a>
         </div>
-      </div>
+      {% endfor %}
+
     </div>
   </div>
 
