jumbotron bg image

--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@ layout: default
       </h1>
 
       <p class="lead hidden-md-up">
-        Skylight is a HUBZone digital consultancy, using design, technology,
+        Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
         and procurement to enable government success in the digital age.
       </p>
 
       <p class="lead hidden-sm-down">
-        Skylight is a HUBZone digital consultancy, using design, technology,
+        Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
         <br /> and procurement to enable government success in the digital age.
       </p>
     </div>
     <a class="lp-headline-cta-btn" href="/hire-us" role="button">
       <span>Let's talk</span>
-      <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
     </a>
   </section>
 
