initial work on service area pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
         <br /> and procurement to enable government success in the digital age.
       </p>
     </div>
-    <a class="lp-headline-cta-btn" href="/hire-us" role="button">
+    <a class="lp-headline-cta-btn" href="/hire-us/" role="button">
       <span>Let's talk</span>
     </a>
   </section>
@@ -67,7 +67,7 @@ layout: default
 
       <div class="lp-body-cta-wrapper">
         <div class="lp-body-cta">
-          <a class="lp-body-cta-btn" href="/about" role="button">
+          <a class="lp-body-cta-btn" href="/about/" role="button">
             About us
           </a>
         </div>
@@ -105,7 +105,7 @@ layout: default
             These services are designed not only to deliver results, but to also
             transfer our knowledge of modern principles and practices to you.
             To facilitate this learning process, we employ a unique practice called
-            <span class="font-italic">embedded instructional design</span>. Even further, <a href="/guilds">our guilds</a> (communities of practice)
+            <span class="font-italic">embedded instructional design</span>. Even further, <a href="/guilds/">our guilds</a> (communities of practice)
             make all of our delivery assets (for example, methodologies) completely free, open,
             and accessible to you.
           </p>
@@ -118,7 +118,7 @@ layout: default
 
       <div class="lp-body-cta-wrapper">
         <div class="lp-body-cta">
-          <a class="lp-body-cta-btn" href="/services" role="button">
+          <a class="lp-body-cta-btn" href="/services/" role="button">
             Our services
           </a>
         </div>
@@ -153,7 +153,7 @@ layout: default
 
       <div class="lp-body-cta-wrapper">
         <div class="lp-body-cta">
-          <a class="lp-body-cta-btn" href="/work" role="button">
+          <a class="lp-body-cta-btn" href="/work/" role="button">
             Our work
           </a>
         </div>
@@ -196,7 +196,7 @@ layout: default
 
       <div class="lp-body-cta-wrapper">
         <div class="lp-body-cta">
-          <a class="lp-body-cta-btn" href="/culture" role="button">
+          <a class="lp-body-cta-btn" href="/culture/" role="button">
             Our culture
           </a>
         </div>
