--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: About Us
+permalink: /about/
 ---
 
 <div class="about-us">
@@ -73,7 +74,7 @@ title: About Us
           one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
           number of people must be concentrated in our “principal office” location, which is in
           Chapel Hill, North Carolina. The remaining percentage of people are free to live
-          in whatever HUBZone locale they prefer. Depending on how people are distributed 
+          in whatever HUBZone locale they prefer. Depending on how people are distributed
           across HUBZones, what qualifies as the greatest concentration in Chapel Hill
           could be a majority or plurality.
         </p>
