leverage fontmatter to reduce html boilerplate for service area pages

--- a/_service_areas/digital_procurement.html
+++ b/_service_areas/digital_procurement.html
@@ -2,6 +2,14 @@
 layout: default
 title: Digital Procurement
 teaser: Tech procurements that succeed and inspire public confidence.
+description: >
+  To support digital progress, procurement must change. At Skylight, we combine
+  technical and acquisition brains to make procurement work for you in the digital age.
+  That means greater collaboration with vendors, faster delivery of value, higher quality
+  results, lower costs, and breakthrough innovations. As founders of 18F, we pioneered and
+  led several game-changing acquisition initiatives, including Agile Acquisition,
+  Agile Delivery Services Marketplace, RFP Ghostwriting, Digital Acquisition Accelerator,
+  and Micro-purchase Platform.
 permalink: /services/digital-procurement/
 icon_path: /img/digital-procurement-icon.svg
 icon_description: Digital Procurement Icon
@@ -9,49 +17,36 @@ order: 2
 feature: true
 service_elements:
   - name: Vendor Marketplaces
-    description: Create a curated marketplace of amazing tech vendors (called a “micro-market”) through our heralded experience with challenge-based procurements.
+    description: >
+      Create a curated marketplace of amazing tech vendors (called a “micro-market”)
+      through our heralded experience with challenge-based procurements.
     order: 1
   - name: Open Source Marketplace
-    description: Engage thousands of great design and development firms through a platform-enabled marketplace for open-source work.
+    description: >
+      Engage thousands of great design and development firms through a
+      platform-enabled marketplace for open-source work.
     order: 2
   - name: Challenges &amp; Prizes
-    description: Source innovative digital solutions to problems from public communities through the use of challenge and prize competitions.
+    description: >
+      Source innovative digital solutions to problems from public communities
+      through the use of challenge and prize competitions.
     order: 3
   - name: Agile Acquisition
-    description: Break free from your old acquisition habits with our proven lean-agile approach to software-based acquisitions, which we pioneered.
+    description: >
+      Break free from your old acquisition habits with our proven
+      lean-agile approach to software-based acquisitions, which we pioneered.
     order: 4
   - name: Good Practices Assurance
-    description: Pinpoint areas to improve your software delivery practices where contractors are involved via our integrated approach to conducting UX audits, code audits, and agile health checks.
+    description: >
+      Pinpoint areas to improve your software delivery practices
+      where contractors are involved via our integrated approach to
+      conducting UX audits, code audits, and agile health checks.
     order: 5
   - name: Agile Coaching
-    description: Propel the performance of your software delivery teams to the next level and beyond through our agile adoption pattern of ShuHaRi.
+    description: >
+      Propel the performance of your software delivery teams to the next
+      level and beyond through our agile adoption pattern of ShuHaRi.
     order: 6
 ---
 
-<div class="service-area-showcase">
-  <div class="page-hdr">
-    <div class="page-hdr-title-wrapper">
-      <div class="page-hdr-title">
-        <h1>{{page.title}}</h1>
-      </div>
-    </div>
-
-    <div class="page-hdr-content-wrapper">
-      <div class="page-hdr-content-variant">
-        <p>
-          To support digital progress, procurement must change. At Skylight, we combine
-          technical and acquisition brains to make procurement work for you in the digital age.
-          That means greater collaboration with vendors, faster delivery of value, higher quality
-          results, lower costs, and breakthrough innovations. As founders of 18F, we pioneered and
-          led several game-changing acquisition initiatives, including Agile Acquisition,
-          Agile Delivery Services Marketplace, RFP Ghostwriting, Digital Acquisition Accelerator,
-          and Micro-purchase Platform.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  {% include service_elements.html %}
-</div>
-
-{% include hire_us_cta.html %}
+{% include service_area.html %}
