--- a/_service_areas/digital_transformation.html
+++ b/_service_areas/digital_transformation.html
@@ -2,6 +2,15 @@
 layout: default
 title: Digital Transformation
 teaser: Digital organizations built to last and attract top digital talent.
+description: >
+  “Going digital” is about people first and technology second. At Skylight,
+  we possess first-hand experience with embedding digital expertise throughout
+  government organizations, and putting the operating principles, structures,
+  and tools in place to unleash the superpowers of high-caliber digital teams.
+  As founders of 18F, we built and scaled the organization to over 200 digital
+  experts, distributed across 30 cities, using existing federal-wide hiring authorities.
+  We’re experts at managing large-scale, high-performing digital talent within
+  government settings.
 permalink: /services/digital-transformation/
 icon_path: /img/digital-transformation-icon.svg
 icon_description: Digital Transformation Icon
@@ -9,41 +18,23 @@ order: 3
 feature: true
 service_elements:
   - name: Digital Transformation Strategy
-    description: Chart a sustainable, self-sufficient path to becoming a digital-first agency through our holistic approach to assessing your unique needs and developing a plan for change.
+    description: >
+      Chart a sustainable, self-sufficient path to becoming a
+      digital-first agency through our holistic approach to assessing
+      your unique needs and developing a plan for change.
     order: 1
   - name: Digital Talent
-    description: Increase and empower the digital talent within your agency, IT organization, business unit, or program office through our experience with large-scale digital talent management.
+    description: >
+      Increase and empower the digital talent within your agency,
+      IT organization, business unit, or program office through our
+      experience with large-scale digital talent management.
     order: 2
   - name: Lean-Agile Enterprise
-    description: Engage and empower teams across your organization to achieve unprecedented levels of performance by instituting lean-agile principles and practices at enterprise scale.
+    description: >
+      Engage and empower teams across your organization to
+      achieve unprecedented levels of performance by instituting lean-agile
+      principles and practices at enterprise scale.
     order: 3
 ---
 
-<div class="service-area-showcase">
-  <div class="page-hdr">
-    <div class="page-hdr-title-wrapper">
-      <div class="page-hdr-title">
-        <h1>{{page.title}}</h1>
-      </div>
-    </div>
-
-    <div class="page-hdr-content-wrapper">
-      <div class="page-hdr-content-variant">
-        <p>
-          “Going digital” is about people first and technology second. At Skylight,
-          we possess first-hand experience with embedding digital expertise throughout
-          government organizations, and putting the operating principles, structures,
-          and tools in place to unleash the superpowers of high-caliber digital teams.
-          As founders of 18F, we built and scaled the organization to over 200 digital
-          experts, distributed across 30 cities, using existing federal-wide hiring authorities.
-          We’re experts at managing large-scale, high-performing digital talent within
-          government settings.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  {% include service_elements.html %}
-</div>
-
-{% include hire_us_cta.html %}
+{% include service_area.html %}
