lots of refactoring, show list of projects on work page and service areas, and more

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,82 +2,74 @@
 layout: default
 title: About Us
 permalink: /about/
+header_title: We're Skylight!
+header_content_css_class: page-hdr-content-1
+header_content: Our mission is to make government work in a digital world.
+header_content_img_path: https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150
+header_content_img_description:
 ---
 
 <div class="about-us">
 
-  <section class="page-hdr">
-    <div class="page-hdr-title-wrapper">
-      <div class="page-hdr-title">
-        <h1> We're Skylight! </h1>
-      </div>
+  {% include page_header.html %}
+
+  <section class="page-block">
+    <div class="page-block-hdr-1">
+      <h2>Our story</h2>
     </div>
 
-    <div class="page-hdr-content-wrapper">
-      <div class="page-hdr-content">
-        <p> Our mission is to make government work in a digital world. </p>
-        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
-      </div>
-    </div>
-  </section>
+    <div class="container">
+      <div class="row">
+        <div class="narrative">
+          <p>
+            Skylight was founded in 2016. We're currently made up of X people and one ferret.
+            We're working hard to maintain disciplined growth while at the same time cultivating
+            an incredible culture. Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445" target="_blank">Chapel Hill, North Carolina</a>,
+            but we're a distributed and remote-friendly team. A lot of our client work
+            originates from Washington DC.
+          </p>
 
-  <section class="about-section container">
-    <div class="about-subheading-wrapper">
-      <div class="about-subheading">
-        <h2> Our story </h2>
-      </div>
-    </div>
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
 
-    <div class="about-content-wrapper">
-      <div class="about-content">
-        <p>
-          Skylight was founded in 2016. We're currently made up of X people and one ferret.
-          We're working hard to maintain disciplined growth while at the same time cultivating
-          an incredible culture. Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445" target="_blank">Chapel Hill, North Carolina</a>,
-          but we're a distributed and remote-friendly team. A lot of our client work
-          originates from Washington DC.
-        </p>
-
-        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
-
-        <p>
-          We're impact junkies who are driven to create better outcomes for the public through
-          great government digital services. We're also engineers, developers, designers,
-          product managers, consultants, writers, speakers, inventors, roboticists, gamers,
-          authors, entrepreneurs, parents, and more. Such a diverse team always gives us a
-          unique perspective on things.
-        </p>
+          <p>
+            We're impact junkies who are driven to create better outcomes for the public through
+            great government digital services. We're also engineers, developers, designers,
+            product managers, consultants, writers, speakers, inventors, roboticists, gamers,
+            authors, entrepreneurs, parents, and more. Such a diverse team always gives us a
+            unique perspective on things.
+          </p>
+        </div>
       </div>
     </div>
   </section>
 
-  <section class="about-section container">
-    <div class="about-subheading-wrapper">
-      <div class="about-subheading">
-        <h2> Certified HUBZone </h2>
-      </div>
+  <section class="page-block">
+    <div class="page-block-hdr-1">
+      <h2>Certified HUBZone</h2>
     </div>
 
-    <div class="about-content-wrapper">
-      <div class="about-content">
-        <p>
-          We're certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program" target="_blank">
-          Historically Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
-          means we're committed to revitalizing local communities through job creation.
-          In turn, we're granted privileged access to federal government contract opportunities,
-          including up to $4M per contract award.
-        </p>
+    <div class="container">
+      <div class="row">
+        <div class="narrative">
+          <p>
+            We're certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program" target="_blank">
+            Historically Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
+            means we're committed to revitalizing local communities through job creation.
+            In turn, we're granted privileged access to federal government contract opportunities,
+            including up to $4M per contract award.
+          </p>
 
-        <p>
-          To maintain our HUBZone status, 35% of our employees must be located in
-          <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps" target="_blank">
-          one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
-          number of people must be concentrated in our “principal office” location, which is in
-          Chapel Hill, North Carolina. The remaining percentage of people are free to live
-          in whatever HUBZone locale they prefer. Depending on how people are distributed
-          across HUBZones, what qualifies as the greatest concentration in Chapel Hill
-          could be a majority or plurality.
-        </p>
+          <p>
+            To maintain our HUBZone status, 35% of our employees must be located in
+            <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps" target="_blank">
+            one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
+            number of people must be concentrated in our “principal office” location, which is in
+            Chapel Hill, North Carolina. The remaining percentage of people are free to live
+            in whatever HUBZone locale they prefer. Depending on how people are distributed
+            across HUBZones, what qualifies as the greatest concentration in Chapel Hill
+            could be a majority or plurality.
+          </p>
+        </div>
       </div>
     </div>
   </section>
@@ -86,43 +78,43 @@ permalink: /about/
     {% include meet_the_team.html %}
   {% endif %}
 
-  <section class="about-section container">
-    <div class="about-subheading-wrapper">
-      <div class="about-subheading">
-        <h2> Always at your service </h2>
-      </div>
+  <section class="page-block">
+    <div class="page-block-hdr-1">
+      <h2>Always at your service</h2>
     </div>
 
-    <div class="about-content-wrapper">
-      <div class="about-content">
-        <p>
-          If you have a question for us, or would just like to get in touch, drop us a
-          message on Slack or at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-          If you’d like to inquire about hiring us for a job, <a href="/hire-us">fill out this short form</a>.
-          If you're interested in joining our team, <a href="/join">send us your information</a>.
-          If you'd like to explore forming a partnership to pursue government opportunities,
-          <a href="/alliances">let's talk</a>.
-        </p>
+    <div class="container">
+      <div class="row">
+        <div class="narrative">
+          <p>
+            If you have a question for us, or would just like to get in touch, drop us a
+            message on Slack or at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+            If you’d like to inquire about hiring us for a job, <a href="/hire-us">fill out this short form</a>.
+            If you're interested in joining our team, <a href="/join">send us your information</a>.
+            If you'd like to explore forming a partnership to pursue government opportunities,
+            <a href="/alliances">let's talk</a>.
+          </p>
 
-        <p>
-          We love to share our thoughts on technology, design, procurement, business, culture,
-          and more with the world. You can <a href="/blog">read up on the our latest thinking at our
-          company blog</a>.
-        </p>
+          <p>
+            We love to share our thoughts on technology, design, procurement, business, culture,
+            and more with the world. You can <a href="/blog">read up on the our latest thinking at our
+            company blog</a>.
+          </p>
 
-        <p>
-          You can also follow along on Twitter @TBD.
-        </p>
+          <p>
+            You can also follow along on Twitter @TBD.
+          </p>
 
-        <p>
-          Feel free to reach out directly to one of our leaders &mdash;
-          <a href="mailto:rob@skylight.digital">Rob Read</a>
-          or <a href="mailto:john@skylight.digital">John Teeter</a>.
-        </p>
+          <p>
+            Feel free to reach out directly to one of our leaders &mdash;
+            <a href="mailto:rob@skylight.digital">Rob Read</a>
+            or <a href="mailto:john@skylight.digital">John Teeter</a>.
+          </p>
 
-        <p>
-          Thank you for taking the time to learn more about us.
-        </p>
+          <p>
+            Thank you for taking the time to learn more about us.
+          </p>
+        </div>
       </div>
     </div>
   </section>
